fix: workspace items with too much border-radius

--- a/dotfiles/ags/scss/widgets/bar.scss
+++ b/dotfiles/ags/scss/widgets/bar.scss
@@ -24,7 +24,7 @@
 .workspaces button {
   background: transparent;
   margin: 0 4px;
-  border-radius: 6px;
+  border-radius: 4px;
   padding: 4px 8px;
 }
 
